--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=development node index.js",
     "dev": "NODE_ENV=development webpack --watch --progress --colors --config webpack.config.dev.js",
-    "build": "NODE_ENV=production webpack --progress -p --config webpack.config.prod.js",
+    "build": "cross-env NODE_ENV=production webpack --progress -p --config webpack.config.prod.js",
     "server": "NODE_ENV=development nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,6 +27,7 @@
     "classnames": "^2.2.3",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.1",
+    "cross-env": "^3.0.0",
     "css-loader": "^0.23.1",
     "enzyme": "^2.3.0",
     "es6-promise": "^3.2.1",
