--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
+    "js-base64": "^2.1.9",
     "react-dropzone": "^3.6.0"
   }
 }
